# luapp

./: CMakeLists.txt  Lua.g4  README.md  environment.cpp  environment.h  exceptions.cpp  exceptions.h  function_abstraction.cpp  function_abstraction.h  interpreter.cpp  interpreter.h  main.cpp  meta_types.h  parser.cpp  playfield.cpp  syntactic_analyzer.cpp  syntactic_analyzer.h  test_interpreter.cpp  types.cpp  types.h
tests/00_goto/: 000_goto_ok.lua
tests/00_goto_break/: 001_goto_bad.lua  002_goto_invisible.lua  003_goto_cross_ok.lua  004_goto_cross_bad.lua  005_goto_out_of_global_function.lua  006_goto_into_local_function.lua  007_multiple_gotos_ok.lua  008_break_bad.lua  009_break_ok.lua  010_goto_multiple_labels_bad.lua  011_goto_multiple_labels_ok.lua
tests/01_typing/: 100_add_typing_ok.lua  101_sub_typing_ok.lua  102_mult_typing_ok.lua  103_div_typing_ok.lua  104_strcat_typing_ok.lua  105_binand_typing_ok.lua  106_binor_typing_ok.lua  107_binxor_typing_ok.lua  108_lshift_typing_ok.lua  109_rshift_typing_ok.lua  110_unary_not_typing_ok.lua  111_bang_typing_ok.lua  112_minus_typing_ok.lua  113_binary_not_typing_ok.lua  114_mod_typing_ok.lua  115_quot_typing_ok.lua  116_logand_typing_ok.lua  117_logor_typing_ok.lua  118_power_typing_ok.lua
tests/02_memory/: 000_local.lua
tests/03_control_flow/: for_num.lua  num_for_reset_counter.lua  repeat.lua  while.lua  while_break.lua
tests/04_integration/: 000_functions.lua  001_closure.lua  002_tables.lua  003_chain_functions.lua  004_nested_functions.lua  005_for_in.lua
